--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <div class="header-content">
             <h1 class="main-title">
                 <i class="fas fa-heart pulse"></i>
-                Canciones para Mi Princesa
+                💖 Contador para nuestro 2do Aniversario 💖
                 <i class="fas fa-heart pulse"></i>
             </h1>
             <p class="subtitle">Una colección de melodías que cuentan nuestra historia de amor</p>
