--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 💖 Contador para nuestro 2do Aniversario 💖
                 <i class="fas fa-heart pulse"></i>
             </h1>
-            <p class="subtitle">Una colección de melodías que cuentan nuestra historia de amor</p>
+            <p class="subtitle">Un contador de alos, meses, semanas, dias, horas, minutos, segundos que llevamos juntos y una colección de melodías que cuentan nuestra historia de amor</p>
             
             <!-- Contadores -->
             <div class="counters-container">
